# unified-code-intelligence

./: .env.example  .env.sample  .gitignore  README.md  docker-compose.local-pro.yml  pyproject.toml
docs/: agentic-enrichment.md  architecture.md  canonical-schema.md  control-flow.md  dashboard.md  document-ingestion-plan-status.md  document-ingestion-plan.md  documentation-ingestion.md  feedback.md  llm-enrichment.md  lsp-refactoring-recommendations.md  mainframe-migration-unit-example.md  mainframe-modernization-approaches.md  mainframe-modernization-backlog.md  mainframe-modernization-tooling-roadmap.md  mcp-tools.md  next-iteration-gap-registry.md  recommendations-status.md  recommendations.md  repo-comparison.md  retrieval-strategy.md  roadmap.md
evals/: README.md  cfg_eval.py  docs_eval.py  flow_eval.py  llm_eval.py  lsp_eval.py  run_eval.py
evals/datasets/: CHANGELOG.md  bank-of-z.json  carddemo.json  cash-account.json  resolve_cases.json  shop.json
evals/docs/: evaluation.md  llm-comparison.md  llm-eval.md  observations.md  running-evals.md  scoring.md  versioning.md
evals/reports/: baseline.json  cfg-eval-20260703T171020Z.json  cfg-eval-20260703T171050Z.json  cfg-eval-20260703T172331Z.json  cfg-eval-20260703T172442Z.json  cfg-eval-20260703T173800Z.json  cfg-eval-20260703T174145Z.json  docs-eval-20260711T092541Z.json  flow-eval-20260703T180919Z.json  llm-eval-20260702T161440Z.json  llm-eval-20260702T212414Z.json  llm-eval-20260702T213827Z.json  llm-eval-20260702T214104Z.json  llm-eval-20260702T214401Z.json  lsp-eval-20260703T165849Z.json  run-20260702T013906Z.json  run-20260702T013906Z.md  run-20260702T021025Z.json  run-20260702T021025Z.md  run-20260702T021050Z.json  run-20260702T021050Z.md
evals/tools/: mine_ground_truth.py  scripted_lsp.py
examples/: README.md  data_lineage.py  legacy_modernization.py
examples/legacy/: ORDREC.cpy  RUNORDER.jcl  order.cbl
src/uci/: __init__.py  backends.py  config.py  engine.py
tests/: conftest.py  test_analysis.py  test_api.py  test_cfg.py  test_cfg_eval.py  test_chunking.py  test_cli.py  test_config_env.py  test_core_schema.py  test_db_browser.py  test_doc_linker.py  test_doc_parser.py  test_docconvert.py  test_docs_eval.py  test_docs_surfaces.py  test_enrich.py  test_enrichment_page.py  test_eval.py  test_evals_gate.py  test_flow.py  test_flow_eval.py  test_flows.py  test_gaps.py  test_graphstore_contract.py  test_impact.py  test_indexer.py  test_langanalyze.py  test_llm_client_freellm.py  test_llm_eval_cli.py  test_lsp_enrich.py  test_lsp_eval.py  test_mainframe.py  test_mcp.py  test_nav.py  test_parsers.py  test_resolution.py  test_retrieval.py  test_stores.py  test_understand.py
(+110 files in other folders)
